remove brand text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="# mb-0 h1"><img src="img/logo.png" alt=""><span class="brand-text">VanceTech</span></a>
+                            <a class="navbar-brand" href="# mb-0 h1"><img src="img/logo.png" alt="">
+<!--                                 <span class="brand-text">VanceTech</span>
+ -->                            </a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
