--- a/index.html
+++ b/index.html
@@ -904,9 +904,9 @@
                     <h2>request a free consultation</h2>
                 </div>
                 <div class="row">
-                    <form class="request_contact" action="https://formspree.io/muthangashem@gmail.com" method="post" id="contactForm" novalidate="novalidate">
-                        <input type="hidden" class="form-control" id="access_token" name="access_token"
-                            value="uyvdgpkx1c7780wnivldeu7b"></input>
+                    <form class="request_contact" action="https://formspree.io/muthangashem@gmail.com" method="POST" id="contactForm" novalidate="novalidate">
+                        <!-- <input type="hidden" class="form-control" id="access_token" name="access_token"
+                            value="uyvdgpkx1c7780wnivldeu7b"></input> -->
                         <div class="form-group col-md-6">
                             <input type="text" class="form-control" id="name" name="name" placeholder="Name">
                         </div>
