--- a/index.html
+++ b/index.html
@@ -975,8 +975,7 @@
                         <div class="col-md-3 col-xs-6">
                             <aside class="f_widget about_widget">
                                 <!-- <img src="img/logo.png" alt=""> -->
-                                <p>Lorem ipsum dolor sit amet, consec-tet ur adipiscing elit, sed do iusmod tempor
-                                    incididunt ut labore et.</p>
+                                <p>VanceTech is a research company serving institutes, communities and the government, non-governmental organizations in enhancing development in the world through research, evaluation and capacity development support.</p>
                                 <!--                                 <a class="f_r_link" href="#">Read More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
  -->
                                 <ul class="f_social">
