fix data colection tab

--- a/services.html
+++ b/services.html
@@ -274,7 +274,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="section_title">
-                                                                <h2>We give best advice for your business</h2>
+                                                                <h2>We Help get in to your Dream University</h2>
                                                             </div>
                                                             <p>An admissions or application essay, sometimes also called a personal statement or a statement of purpose, is an essay or other written statement written by an applicant, often a prospective student applying to some college, university, or graduate school. The application essay is a common part of the university and college admissions process.
 
@@ -306,7 +306,7 @@
                                                                 <img src="img/company/about-company-img4.jpg" alt="">
                                                             </div>
                                                             <div class="section_title">
-                                                                <h2>We give best advice for your business</h2>
+                                                                <h2>Annotation Bibliographies</h2>
                                                             </div>
                                                             <p>Creating an annotation page is usually required when you are working on a more complex work. For example, a simple essay will not require you to include annotations, but if you are writing a dissertation, research or course work on serious subjects like Medicine, History, Economics and other – you will have to include this page. Why? Annotation is intended to explain to the reader why chosen sources are relevant and important to your work.</p>
                                                         </div>
@@ -349,7 +349,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="section_title">
-                                                                <h2>Draft up a killer prposal</h2>
+                                                                <h2>Draft a killer proposal</h2>
                                                             </div>
                                                             <div class="analysis_text">
                                                                     <p>Writing research proposal is vital in getting started with a project. When you write your research proposal, it’s important to be as clear and concise as possible.</p>
@@ -587,13 +587,13 @@
                                                                     </div>
                                                                 
                                                      </div>
-                                                    <div role="tabpanel" class="tab-pane fade" id="carrers4">
+                                                    <div role="tabpanel" class="tab-pane fade" id="carrers5">
                                                             <div class="about_company">
                                                                 <div class="our_about_image">
                                                                     <img src="img/company/about-company-img6.jpg" alt="">
                                                                 </div>
                                                                 <div class="section_title">
-                                                                    <h2>PHD DISSERTATION PROPOSAL WRITING SERVICE</h2>
+                                                                    <h2>Data Collection And Analysis</h2>
                                                                 </div>
                                                                      </p>
                                                                      <p>In order to successfully complete your doctoral degree, you must demonstrate complete authority over your field of study.This is where the dissertation proposal comes in. You must take all of the knowledge that you have acquired during your academic career and apply it in the form of a lengthy assignment.
